@@ -1,5 +1,7 @@
 0.87_dev
 -update interface to address issue in move method when get_fps return zero.
+-add is_panel_display to check panel controls displayed.
+-update set_panel_display to ensure display updates.
 
 0.87    2015-04-12
 -update Text.tprint to use rendered character cache.
